added repo and git names

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: com.example.autoupdatetest
 publish:
   provider: github
-  owner: your-github-username
-  repo: your-repo-name
+  owner: DharanRaj1
+  repo: electron-auto_update
