--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
       "publish": [
         {
           "provider": "github",
-          "owner": "your-github-username",
-          "repo": "your-repo-name"
+          "owner": "DharanRaj1",
+          "repo": "electron-auto_update"
         }
       ]
     },
