--- a/package.json
+++ b/package.json
@@ -1,29 +1,37 @@
 {
-    "name": "electron-auto-update-test",
-    "version": "1.0.2",
-    "description": "Test app for Electron auto-update via GitHub",
-    "main": "main.js",
-    "scripts": {
-      "start": "electron .",
-      "pack": "electron-builder --dir",
-      "dist": "electron-builder"
+  "name": "electron-app",
+  "version": "1.0.2",
+  "description": "My test electron app",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "nodemon --exec electron .",
+    "start": "electron .",
+    "dist": "electron-builder"
+  },
+  "repository": "https://github.com/DharanRaj1/electron-auto_update",
+  "publish": {
+    "provider": "github",
+    "releaseType": "release"
+  },
+  "build": {
+    "appId": "com.dharanraj1.autoupdater",
+    "productName": "Autoupdater-app",
+    "win": {
+      "target": "nsis"
     },
-    "build": {
-      "appId": "com.example.autoupdatetest",
-      "publish": [
-        {
-          "provider": "github",
-          "owner": "DharanRaj1",
-          "repo": "electron-auto_update"
-        }
-      ]
-    },
-    "dependencies": {
-      "electron-updater": "^5.3.0"
-    },
-    "devDependencies": {
-      "electron": "^28.2.0",
-      "electron-builder": "^24.8.0"
+    "directories": {
+      "output": "dist"
     }
+  },
+  "author": "DharanRaj1",
+  "license": "ISC",
+  "devDependencies": {
+    "electron": "^19.0.9",
+    "electron-builder": "^23.6.0",
+    "nodemon": "^2.0.19"
+  },
+  "dependencies": {
+    "electron-updater": "^5.3.0"
   }
-  
+}
